--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Prod/
 Resourses/
 readme_staff.md
 LLMFarm.xcodeproj/project.xcworkspace/xcuserdata/guinmoon.xcuserdatad
+llmfarm_core.swift/Sources/llmfarm_core/backup/
