--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Resourses/
 readme_staff.md
 LLMFarm.xcodeproj/project.xcworkspace/xcuserdata/guinmoon.xcuserdatad
 llmfarm_core.swift/Sources/llmfarm_core/backup/
+xcuserdata/
