--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ readme_staff.md
 LLMFarm.xcodeproj/project.xcworkspace/xcuserdata/guinmoon.xcuserdatad
 llmfarm_core.swift/Sources/llmfarm_core/backup/
 xcuserdata/
+site/*
