updateupdated to llama.cpp llama.cpp dadbed9, A noticeable increase in the speed of metal on ios. Now 7B qK_3 model works fine on iphone 12

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ LLMFarm.xcodeproj/project.xcworkspace/xcuserdata/guinmoon.xcuserdatad
 llmfarm_core.swift/Sources/llmfarm_core/backup/
 xcuserdata/
 site/*
+backup/*
