gguf support, 2 version of llama.cpp dadbed9 to work with ggjtv3 and b1132 to test gguf

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "ggml_old.h": "c",
         "ggml_a1d0ea7.h": "c",
-        "utility": "cpp"
+        "utility": "cpp",
+        "fstream": "cpp",
+        "string": "cpp",
+        "k_quants_dadbed9.h": "c"
     }
 }
