--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ backup/*
 *autosave.kra
 LLMFarm.xcodeproj/xcshareddata/xcschemes/LLMFarm.xcscheme
 llmfarm_core_legacy.swift
+dist/iphone-png-screen.kra
+dist/screen1.png~
