--- a/RagTestIOS/RagTestIOS.xcodeproj/xcshareddata/xcschemes/RagTestIOS.xcscheme
+++ b/RagTestIOS/RagTestIOS.xcodeproj/xcshareddata/xcschemes/RagTestIOS.xcscheme
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1500"
+   LastUpgradeVersion = "1540"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "YES"
+      buildArchitectures = "Automatic">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -14,10 +15,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "llmfarm_core"
-               BuildableName = "llmfarm_core"
-               BlueprintName = "llmfarm_core"
-               ReferencedContainer = "container:llmfarm_core.swift">
+               BlueprintIdentifier = "15171A982CC3A8EF00EF36DB"
+               BuildableName = "RagTestIOS.app"
+               BlueprintName = "RagTestIOS"
+               ReferencedContainer = "container:RagTestIOS.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -39,6 +40,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "15171A982CC3A8EF00EF36DB"
+            BuildableName = "RagTestIOS.app"
+            BlueprintName = "RagTestIOS"
+            ReferencedContainer = "container:RagTestIOS.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -46,15 +57,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "llmfarm_core"
-            BuildableName = "llmfarm_core"
-            BlueprintName = "llmfarm_core"
-            ReferencedContainer = "container:llmfarm_core.swift">
+            BlueprintIdentifier = "15171A982CC3A8EF00EF36DB"
+            BuildableName = "RagTestIOS.app"
+            BlueprintName = "RagTestIOS"
+            ReferencedContainer = "container:RagTestIOS.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
