llama.cpp updated to b4562

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "ggml-alloc.h": "c",
         "ggml_d925ed-alloc.h": "c",
         "ggml_d925ed.h": "c",
-        "assert.h": "c"
+        "assert.h": "c",
+        "vector": "cpp"
     }
 }
